fixed gsap and double scroll

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,6 @@ body {
   margin: 0;
   display: block;
   overflow-x: hidden;
-  overflow-y: auto;
 }
 
 h1 {
